--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "gulp-postcss": "^6.0.1",
     "postcss-extend": "^1.0.1",
     "postcss-import": "^7.1.3",
-    "postcss-mixins": "^2.1.1",
+    "postcss-mixins": "^3.0.2",
     "postcss-nested": "^1.0.0",
-    "postcss-simple-vars": "^1.1.0"
+    "postcss-simple-vars": "^1.1.0",
+    "stylep-card": "^0.1.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
